Mark ErrorProne's DefaultCharset as ERROR